# sd-public-safety

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt
.github/workflows/: refresh.yml
.streamlit/: config.toml
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: arrests_by_type.parquet  cfs_by_beat.parquet  cfs_monthly.parquet  cfs_temporal.parquet  crime_by_agency.parquet  crime_by_city.parquet  crime_by_type.parquet  crime_by_zip.parquet  crime_overview_monthly.parquet  domestic_violence.parquet  temporal_patterns.parquet  victim_demographics.parquet  yearly_summary.parquet
pipeline/: build.py  ingest.py  transform.py  validate.py
