[project]
name = "sd-public-safety"
version = "0.1.0"
description = "San Diego public safety: crime patterns, arrests, and calls for service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "streamlit>=1.40",
    "pydeck>=0.9",
    "plotly>=5.0",
    "pyarrow>=17.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "fastmcp>=2.12",
    "pandas>=2.0",
]

[project.scripts]
crime-build = "pipeline.build:main"
crime-mcp = "api.mcp_server:main"
